--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.11.0
+  firebase_auth: ^4.5.0
+  firebase_storage: ^11.1.2
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
