--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
   firebase_storage: ^11.1.2
-  fluttertoast: ^8.2.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
