--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.1.1
   flutter_svg: ^2.0.5
   cloud_firestore: ^4.7.0
+  file_picker: ^5.3.1
 
 dev_dependencies:
   flutter_test:
